--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "ejs": "^3.1.10",
     "express": "^4.19.2",
     "express-ejs-layouts": "^2.5.1",
-    "mongoose": "^8.3.3"
+    "method-override": "^3.0.0",
+    "mongoose": "^8.3.3",
+    "multer": "^1.4.5-lts.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.0"
